# rk_ai_video

./: CMakeLists.txt  README.md  build.sh  config.conf
include/: BYTETracker.h  config.h  ffmpeg_with_mpp.h  rknn_func.h
src/: backup.txt  rtsp_with_mpp_using_opencv.cpp  rtsp_with_mpp_using_opencv_rgb.cpp  yolov5_rtsp_with_ffmpeg.cpp
src/rknn/: rknn_func.cc
